# fds-scanner

./: .env-example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
plugins/documentcamera/: Cargo.toml  README.md  build.rs
plugins/documentcamera/android/: build.gradle.kts
plugins/documentcamera/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/documentcamera/android/src/main/java/: DocumentCameraActivity.kt  DocumentCameraPlugin.kt
plugins/documentcamera/android/src/test/java/: ExampleUnitTest.kt
plugins/documentcamera/ios/: Package.swift  README.md
plugins/documentcamera/ios/Sources/: DocumentCameraPlugin.swift  FontSizeCalculator.swift
plugins/documentcamera/permissions/: default.toml
plugins/documentcamera/permissions/autogenerated/: reference.md
plugins/documentcamera/permissions/schemas/: schema.json
plugins/documentcamera/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/webauth/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
plugins/webauth/android/: .gitignore  build.gradle.kts
plugins/webauth/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/webauth/android/src/main/java/: Example.kt  ExamplePlugin.kt  WebAuthPlugin.kt
plugins/webauth/android/src/test/java/: ExampleUnitTest.kt
plugins/webauth/guest-js/: index.ts
plugins/webauth/ios/: Package.swift  README.md
plugins/webauth/ios/Sources/: WebAuthPlugin.swift
plugins/webauth/ios/Tests/PluginTests/: PluginTests.swift
plugins/webauth/permissions/: default.toml
plugins/webauth/permissions/autogenerated/: reference.md
plugins/webauth/permissions/autogenerated/commands/: start_auth.toml
plugins/webauth/permissions/schemas/: schema.json
plugins/webauth/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
scripts/: build_android.sh  build_ios.sh  playstore_upload.py
src/: App.vue  account.ts  conf.ts  main.ts  router.ts  utils.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  api.rs  error.rs  lib.rs  main.rs  scan.rs  tus.rs
src/components/: Account.vue  Attachment.vue  ErrorMessage.vue  Info.vue  Login.vue  Message.vue  MessageCreate.vue  QrCode.vue  Request.vue  RequestList.vue  Scan.vue
src/stores/: foiattachments.ts  foimessages.ts  foirequests.ts
