[package]
name = "fds-scanner"
version = "0.1.13"
description = "FDS Scanner app"
authors = ["Stefan Wehrmeyer"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fds_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
tauri-plugin = { version = "2.0.5", features = ["build"] }

[dependencies]
base64 = "0.13"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-webauth = { path = "../plugins/webauth", version = "0.1.0" }
tauri-plugin-documentcamera = { path = "../plugins/documentcamera", version = "0.1.0" }
tauri-plugin-barcode-scanner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oauth2 = "4.4.2"
thiserror = "1.0.64"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-store = "2"
chrono = "0.4.38"
sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
# panic = "abort"   # Higher performance by disabling panic handlers.
# strip = true # Ensures debug symbols are removed.
