[package]
name = "tauri-plugin-webauth"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.78"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-webauth"

[dependencies]
tauri = { version = "2.0.0" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
